# caliwines-mlops

./: .gitignore  OLD_README.md  README.md  dbx_configure.sh  dbx_test.sh  deployment_modifier.sh  local_env_cleanup.sh  local_env_setup.sh  local_reqs.txt  pyproject.toml  requirements.txt  setup.py  setup_environment.sh  test_ws_delete.sh
.dbx/: project.json
.github/workflows/: onpush.yml  onrelease.yml
conf/: .base_data_params.env  cali_housing_config_1.yml  dep.yml  dep.yml.bak  deployment.bak  deployment.yml
conf/cali_mlops/: .base_data_params.env
conf/dev/: .dev.env
conf/mlops/: .base_data_params.env
conf/pipeline_configs/: cali_model_config.yml  cali_setup_config.yml  model_deployment.yml  propval_model_deployment_cfg.yml  propval_model_inference_batch_cfg.yml  propval_model_train_cfg.yml  wineclassif_model_deployment_cfg.yml  wineclassif_model_inference_batch_cfg.yml  wineclassif_model_train_cfg.yml
conf/prod/: .prod.env
conf/staging/: .staging.env
conf/tasks/: sample_ml_config.yml
dbx_commands/: dbx_run.sh  dbx_test.sh
local/: delete_jobs.py  deploy_dev.sh
notebooks/: sample_notebook.py
notebooks/_cali_mlops_data_generator/: data_cleanup.py  data_setup.py
notebooks/_data_generator/: data_cleanup.py  data_setup.py
notebooks/_mlops_data_generator/: data_cleanup.py  data_setup.py
notebooks/cali_housing_ml/: model_deployment.py  model_train.py
notebooks/cali_housing_ml_pipeline/: model_deployment.py  model_inference_batch.py  model_train.py
notebooks/cali_housing_mlops/: _access_config_notebook.py  _adhoc_scratch_nb copy.py  _adhoc_scratch_nb.py  _adhoc_setup_catalog.py  data_setup.py  model_deployment.py  model_inference.py  model_inference_batch.py  model_train.py  setup_data.py
notebooks/cali_housing_model/: data_setup.py  model_deployment.py  model_inference_batch.py  model_train.py
notebooks/cali_housing_project/: model_deployment.py  model_train.py  (+1 more)
packaged_poc/: common.py  common_new2.py
src/: common.py  dbconnect.py
terraform/: job.tf
(+141 files in other folders)
