[tool.pytest.ini_options]
addopts = "-s -p no:warnings"
log_cli = 1
log_cli_level = "INFO"
log_cli_format = "[pytest][%(asctime)s][%(levelname)s][%(module)s][%(funcName)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_level = "INFO"

[tool.black]
line-length = 120

[tool.coverage.run]
branch = true
source = [
    "packaged_poc"
]

[tool.coverage.report]

exclude_lines = [
    "if self.debug:",
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]

ignore_errors = true
omit = [
    "tests/*",
    "setup.py",
]

[tool.poetry]
name = "cali-housing-mlops"
version = "0.0.1"
description = ""
authors = ["Xavier Armitage <xavier.armitage@databricks.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
databricks-connect = ">=13.0.0,<13.1.0"

[tool.poetry.group.dev.dependencies]
databricks-connect = ">=13.0.0,<13.1.0"
pytest = "^7.3.1"